# LinuxWeather

./: CMakeLists.txt  README.md
qml/: Main.qml  qml.qrc
qml/core/: Button.qml
qml/modals/: WeatherModal.qml
qml/widgets/: WeatherWidget.qml
resources/: resources.qrc
resources/json/: conditions.json  weather_output.json
src/: main.cpp
src/core/Weather/: WeatherData.h  WeatherDataManager.cpp  WeatherDataManager.h
src/models/Weather/: WeeklyWeatherModel.cpp  WeeklyWeatherModel.h
